# VideoPlatform

./: CMakeLists.txt  README.md  app.js  db.cpp  db.h  index.html.html  main.cpp  style.css
